Revert "HUE-7680 [frontend] Fix overflow for the sample tables in the popovers"
This reverts commit ae18ac53a7b933b4979165998207ada5dc17303b.

--- a/desktop/core/src/desktop/static/desktop/less/hue-assist.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-assist.less
@@ -809,7 +809,7 @@
 
 .context-popover-sample {
   text-align: left;
-  padding: 0;
+  padding: 3px;
   overflow: hidden;
   height: 100%;
 
@@ -840,10 +840,6 @@
       height: 23px;
       border-bottom: 1px solid @cui-gray-200 !important;
     }
-  }
-
-  .dataTables_wrapper {
-    overflow: auto;
   }
 }
 
